add fork yolov5 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "strong_sort/deep/reid"]
 	path = strong_sort/deep/reid
 	url = https://github.com/KaiyangZhou/deep-person-reid
+[submodule "yolov5"]
+	path = yolov5
+	url = https://github.com/IraMeis/yolov5
